# beam-section-property-tool

./: .gitignore  CMakeLists.txt  IMPLEMENTATION_STATUS.md  README.md  build_windows.bat
.github/workflows/: cmake.yml
Documents/: API_Reference.md  Architecture.md  DLL_Interface.md  Defect_Log.md  Developer_Guide.md  Final_Acceptance_Checklist.md  Implementation_Status.md  Numerical_Validation_Report.md  README.md  Test_Report.md  User Manual.docx  User Manual.md  Windows_Qt_Verification.md
Documents/final-report/: Beam_Element_Section_Property_Tool_Final_Report.md
Documents/source_requirements/: README.md  Test Data.xls  temp_req.txt
Examples/example1_parametric/: main.cpp
Examples/example2_canvas/: main.cpp
Examples/example3_dll_batch/: main.cpp
Source/api/: section_property_tool.cpp  section_property_tool.h
Source/app/: README.md
Source/calculation/: SectionCalculator.cpp  SectionCalculator.h
Source/common/: DataModel.h  StringUtils.h
Source/geometry/: GeometryUtils.cpp  GeometryUtils.h  SectionBuilder.cpp  SectionBuilder.h
Source/gui/: main.cpp
Source/import_export/: Exporter.cpp  Exporter.h
Source/mesh/: MeshEngine.cpp  MeshEngine.h
Source/stress/: StressPointEngine.cpp  StressPointEngine.h
bsp_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Continuous.vcxproj  Continuous.vcxproj.filters  DartConfiguration.tcl  Experimental.vcxproj  Experimental.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  Nightly.vcxproj  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj  NightlyMemoryCheck.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  SectionPropertyApi.vcxproj  SectionPropertyApi.vcxproj.filters  SectionPropertyCore.vcxproj  SectionPropertyCore.vcxproj.filters  SectionPropertyTests.vcxproj  SectionPropertyTests.vcxproj.filters  SectionPropertyTool.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  example1_parametric.vcxproj  example1_parametric.vcxproj.filters  example2_canvas.vcxproj  example2_canvas.vcxproj.filters  example3_dll_batch.vcxproj  example3_dll_batch.vcxproj.filters
bsp_build/SectionPropertyApi.dir/Release/: SectionPropertyTool.dll.recipe
bsp_build/SectionPropertyApi.dir/Release/SectionP.BA3EC986.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  SectionPropertyApi.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
bsp_build/SectionPropertyCore.dir/Release/: SectionPropertyCore.lib.recipe
bsp_build/SectionPropertyCore.dir/Release/SectionP.FBF9DFBA.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
bsp_build/SectionPropertyTests.dir/Release/: SectionPropertyTests.exe.recipe
bsp_build/SectionPropertyTests.dir/Release/SectionP.894545BE.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
bsp_build/example1_parametric.dir/Release/: example1_parametric.exe.recipe
bsp_build/example1_parametric.dir/Release/example1.BD44F122.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
bsp_build/example2_canvas.dir/Release/: example2_canvas.exe.recipe
bsp_build/example2_canvas.dir/Release/example2_canvas.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
bsp_build/example3_dll_batch.dir/Release/: example3_dll_batch.exe.recipe
bsp_build/example3_dll_batch.dir/Release/example3.8D0612C2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
bsp_build/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
bsp_build/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.write.1.tlog
cmake/: README.md
resources/icons/: README.md
resources/qt/: README.md
resources/schematics/: README.md
tests/fixtures/: test_data_reference.json
tests/gui_smoke/: README.md
tests/integration/: test_api.cpp
tests/regression/: test_regression.cpp
tests/smoke/: windows_gui_smoke_test.cpp
tests/unit/: test_main.cpp
tools/: extract_test_data.py
(+3 files in other folders)
